--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,9 +5,236 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,800" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/custom.css">
 </head>
-<body>
-    
+
+<body class="bg-black text-white">
+    <!-- Block One -->
+    <div class="flex flex-col mx-auto h-screen">
+        
+        <!-- Nav bar -->
+        <div class="md:flex hidden items-center justify-between pt-14 px-11 pb-28">
+            <div class="flex items-center justify-center">
+                <a href="#" class="hover:scale-105">
+                    <img src="../assets/images/logo.png" alt="logo">
+                </a>
+            </div>
+            <ul class="flex items-center justify-center space-x-6">
+                <li class="text-2xl hover:text-blur hover:underline underline-offset-8">
+                    <a href="#">New Releases</a>
+                </li>
+                <li class="text-2xl hover:text-blur hover:underline underline-offset-8">
+                    <a href="#">Men</a>
+                </li>
+                <li class="text-2xl  hover:text-blur hover:underline underline-offset-8">
+                    <a href="#">Women</a>
+                </li>
+                <li class="text-2xl hover:text-blur hover:underline underline-offset-8">
+                    <a href="#">Kids</a>
+                </li>
+                <li class="text-2xl hover:text-blur hover:underline underline-offset-8">
+                    <a href="#">Sale</a>
+                </li>
+                <li class="text-2xl hover:text-blur hover:underline underline-offset-8">
+                    <a href="#">Gifts</a>
+                </li>
+            </ul>
+            <div class="flex items-center justify-center space-x-6">
+                <a href="#" class="hover:scale-105">
+                    <img src="../assets/icons/search.png" alt="search">
+                </a>
+                <a href="#" class="hover:scale-105">
+                    <img src="../assets/icons/user-avatar.png" alt="search">
+                </a>
+            </div>
+        </div>
+
+        <!-- Mobile Nav bar -->
+        <div class="md:hidden flex items-center justify-center pt-14 px-11 pb-28">
+            <div class="flex items-center justify-between w-full">
+                <a href="#" class="hover:scale-105">
+                    <img src="../assets/icons/user-avatar.png" alt="search">
+                </a>
+                <a href="#" class="hover:scale-105">
+                    <img src="../assets/images/logo.png" alt="logo">
+                </a>
+                <div class="flex items-center justify-center space-x-6">
+                    <a href="#" class="hover:scale-105">
+                        <img src="../assets/icons/search.png" alt="search">
+                    </a>
+                    <a href="#" class="hover:scale-105">
+                        <img src="../assets/icons/user-avatar.png" alt="search">
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Banner -->
+        <div class="relative flex flex-col items-center justify-between h-full group">
+            <div class="absolute flex items-center justify-center h-full w-full opacity-20 -z-20">
+                <img class="group-hover:scale-105" src="../assets/images/nike.png" alt="nike">
+            </div>
+            <div class="text-center font-bold md:text-7xl text-5xl">AIR Beyond Compare</div>
+            <div class="relative flex flex-1 w-full">
+                <div class="absolute flex items-center justify-center h-full w-full -z-10 sm:-mt-20 sm:-ml-16 -mt-8 -ml-8">
+                    <img src="../assets/images/bunner.png" alt="Banner">
+                </div>
+                <div class="absolute flex items-center justify-center h-full w-full">
+                    <div class="sm:w-44 w-12 h-96 pt-96 rounded-full bg-secondary blur-3xl group-hover:bg-primary rotate-[60deg] -z-20"></div>
+                </div>
+            </div>
+            <div class="text-center md:text-3xl text-2xl text-blur">Explore the best Air Max for fall & beyond</div>
+        </div>
+
+        <!-- Divider -->
+        <div class="flex items-center justify-center w-full py-28">
+            <div class="h-3 w-40 bg-secondary rounded-full group">
+                <div class="flex items-center justify-center w-full h-full bg-secondary rounded-full group-hover:blur-lg"></div>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Block Two -->
+    <div class="flex flex-col mx-auto h-screen">
+        <!-- Banner 2 -->
+        <div class="relative flex flex-col items-center justify-between h-full bg-primary">
+            <div class="absolute flex items-center justify-center h-full w-full opacity-40 z-10">
+                <img src="../assets/images/NIKE ZOOM.png" alt="nike">
+            </div>
+            <div class="absolute flex items-end justify-center h-full w-full z-0">
+                <img class="w-full" src="../assets/images/Bg-block-2.png" alt="bg block 2 ">
+            </div>
+            <div class="self-start text-4xl font-medium pt-9 pl-9 z-30">The Nike ZoomX Vaporfly</div>
+            <div class="absolute flex items-center justify-center w-full h-full -ml-16 z-20">
+                <img src="../assets/images/bunner-2.png" alt="banner 2">
+            </div>
+            <div class="flex items-center justify-end w-full pb-12 z-30">
+                <div class="text-6xl font-medium mr-8">250$</div>
+                <a href="#" class="btn-cirle btn-cirle--hover">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
+                    </svg>
+                </a>
+            </div>
+        </div>
+
+        <!-- Divider -->
+        <div class="flex items-center justify-center w-full py-28">
+            <div class="h-3 w-40 bg-secondary rounded-full"></div>
+        </div>
+
+    </div>
+
+    <!-- Block Three -->
+    <div class="flex flex-col mx-auto h-screen">
+
+        <!-- Slider -->
+        <div class="flex flex-col items-center justify-center h-full w-full">
+            <!-- Card wraper -->
+            <div class="flex items-center justify-around w-full pt-11 sm:flex-row flex-col">
+                <!-- Card -->
+                <div class="flex flex-col items-center justify-between p-6 lg:w-[400px] lg:h-[400px] sm:w-[250px] sm:h-[250px] w-[300px] h-[300px] bg-gradient-to-bl from-secondary to-primary rounded-xl sm:mb-0 mb-8">
+                    <div class="flex items-center justify-center -mt-10">
+                        <img src="../assets/images/air-zoom-pegasus-38-mens-running-shoes-lq7PZZ 1.png" alt="air 1">
+                    </div>
+                    <div class="text-center text-3xl font-semibold">Nike Air Zoom Pegasus 38</div>
+                    <div class="text-3xl font-semibold">120$</div>
+                </div>
+                <!-- End Card -->
+
+                <!-- Card -->
+                <div class="flex flex-col items-center justify-between p-6 lg:w-[400px] lg:h-[400px] sm:w-[250px] sm:h-[250px] w-[300px] h-[300px] bg-gradient-to-bl from-secondary to-primary rounded-xl sm:mb-0 mb-8">
+                    <div class="flex items-center justify-center -mt-10">
+                        <img src="../assets/images/air-zoom-pegasus-38-mens-running-shoes-lq7PZZ 1.png" alt="air 1">
+                    </div>
+                    <div class="text-center text-3xl font-semibold">Nike ZoomX Invincible Run Flyknit</div>
+                    <div class="text-3xl font-semibold">180$</div>
+                </div>
+                <!-- End Card -->
+
+                <!-- Card -->
+                <div class="flex flex-col items-center justify-between p-6 lg:w-[400px] lg:h-[400px] sm:w-[250px] sm:h-[250px] w-[300px] h-[300px] bg-gradient-to-bl from-secondary to-primary rounded-xl sm:mb-0 mb-8">
+                <div class="flex items-center justify-center -mt-10">
+                    <img src="../assets/images/air-zoom-pegasus-38-mens-running-shoes-lq7PZZ 1.png" alt="air 1">
+                </div>
+                <div class="text-center text-3xl font-semibold">Nike Revolution 6</div>
+                <div class="text-3xl font-semibold">60$</div>
+                </div>
+                <!-- End Card -->
+            </div>
+            <!-- End Card wraper -->
+
+            <!-- Indicators -->
+            <div class="flex items-center justify-center w-full space-x-4 sm:pt-14 pt-2">
+                <div class="w-5 h-5 bg-primary rounded-full"></div>
+                <div class="w-5 h-5 bg-secondary rounded-full"></div>
+                <div class="w-5 h-5 bg-secondary rounded-full"></div>
+            </div>
+        </div>
+
+        <!-- Divider -->
+        <div class="flex items-center justify-center w-full sm:py-28 py-40">
+            <div class="h-3 w-40 bg-secondary rounded-full"></div>
+        </div>
+
+    </div>
+
+    <!-- Footer -->
+    <div class="flex flex-col items-center justify-center sm:pt-40 pt-80 mx-auto">
+        <div class="grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 w-full px-20">
+            <!-- ROW-1 -->
+            <a href="#" class="text-xl font-bold">GIFT CARDS</a>
+            <a href="#" class="text-xl font-bold">GET HELP</a>
+            <a href="#" class="text-xl font-bold">ABOUT NIKE</a>
+
+            <div class="row-span-6 flex items-start justify-start space-x-6">
+                <a href="#" class="flex items-center justify-center w-12 h-12 rounded-full bg-gradient-to-bl from-primary to-secondary">
+                    <img src="../assets/images/Facebook.png" alt="facebook">
+                </a>
+                <a href="#" class="flex items-center justify-center w-12 h-12 rounded-full bg-gradient-to-bl from-primary to-secondary">
+                    <img src="../assets/images/Twitter.png" alt="facebook">
+                </a>
+                <a href="#" class="flex items-center justify-center w-12 h-12 rounded-full bg-gradient-to-bl from-primary to-secondary">
+                    <img src="../assets/images/Youtube.png" alt="facebook">
+                </a>
+                <a href="#" class="flex items-center justify-center w-12 h-12 rounded-full bg-gradient-to-bl from-primary to-secondary">
+                    <img src="../assets/images/Instagram.png" alt="facebook">
+                </a>
+            </div>
+
+            <!-- ROW-2 -->
+            <a href="#" class="text-xl font-bold">PROMOTIONS</a>
+            <a href="#" class="text-lg text-secondary">Order Status</a>
+            <a href="#" class="text-lg text-secondary">News</a>
+
+            <!-- ROW-3 -->
+            <a href="#" class="text-xl font-bold">FIND A STORE</a>
+            <a href="#" class="text-lg text-secondary">Shipping and Delivery</a>
+            <a href="#" class="text-lg text-secondary">Careers</a>
+
+            <!-- ROW-4 -->
+            <a href="#" class="text-xl font-bold">SIGN UP FOR EMAIL</a>
+            <a href="#" class="text-lg text-secondary">Returns</a>
+            <a href="#" class="text-lg text-secondary">Investors</a>
+
+            <!-- ROW-5 -->
+            <a href="#" class="text-xl font-bold">BECOME A MEMBER</a>
+            <a href="#" class="text-lg text-secondary">Payment Options</a>
+            <a href="#" class="text-lg text-secondary">Purpose</a>
+
+            <!-- ROW-6 -->
+            <a href="#" class="text-xl font-bold">NIKE JOURNAL</a>
+            <a href="#" class="text-lg text-secondary">Contact Us</a>
+            <a href="#" class="text-lg text-secondary">Sustainability</a>
+
+            <!-- ROW-7 -->
+            <a href="#" class="text-xl font-bold">SEND US FEEDBACK</a>
+
+        </div>
+        <img class="w-full" src="../assets/images/bg-footer.png" alt="bg-foter">
+    </div>
 </body>
 </html>
