--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,38 +10,38 @@
     <link rel="stylesheet" href="../assets/css/custom.css">
 </head>
 
-<body class="bg-black text-white">
+<body >
     <!-- Block One -->
-    <div class="flex flex-col mx-auto h-screen">
+    <div class="site-block">
         
         <!-- Nav bar -->
-        <div class="md:flex hidden items-center justify-between pt-14 px-11 pb-28">
-            <div class="flex items-center justify-center">
+        <div class="site-block_Navbar site-block_navbar--desktop">
+            <div class="navbar_block">
                 <a href="#" class="hover:scale-105">
                     <img src="../assets/images/logo.png" alt="logo">
                 </a>
             </div>
-            <ul class="flex items-center justify-center space-x-6">
-                <li class="text-2xl hover:text-blur hover:underline underline-offset-8">
+            <ul class="navbar_block space-x-6">
+                <li class="navbar-block-menu-item">
                     <a href="#">New Releases</a>
                 </li>
-                <li class="text-2xl hover:text-blur hover:underline underline-offset-8">
+                <li class="navbar-block-menu-item">
                     <a href="#">Men</a>
                 </li>
-                <li class="text-2xl  hover:text-blur hover:underline underline-offset-8">
+                <li class="navbar-block-menu-item">
                     <a href="#">Women</a>
                 </li>
-                <li class="text-2xl hover:text-blur hover:underline underline-offset-8">
+                <li class="navbar-block-menu-item">
                     <a href="#">Kids</a>
                 </li>
-                <li class="text-2xl hover:text-blur hover:underline underline-offset-8">
+                <li class="navbar-block-menu-item">
                     <a href="#">Sale</a>
                 </li>
-                <li class="text-2xl hover:text-blur hover:underline underline-offset-8">
+                <li class="navbar-block-menu-item">
                     <a href="#">Gifts</a>
                 </li>
             </ul>
-            <div class="flex items-center justify-center space-x-6">
+            <div class="navbar_block space-x-6">
                 <a href="#" class="hover:scale-105">
                     <img src="../assets/icons/search.png" alt="search">
                 </a>
@@ -52,15 +52,15 @@
         </div>
 
         <!-- Mobile Nav bar -->
-        <div class="md:hidden flex items-center justify-center pt-14 px-11 pb-28">
-            <div class="flex items-center justify-between w-full">
+        <div class="site-block_Navbar site-block_navbar--mobile">
+            <div class="navbar_block w-full">
                 <a href="#" class="hover:scale-105">
                     <img src="../assets/icons/user-avatar.png" alt="search">
                 </a>
                 <a href="#" class="hover:scale-105">
                     <img src="../assets/images/logo.png" alt="logo">
                 </a>
-                <div class="flex items-center justify-center space-x-6">
+                <div class="navbar_block space-x-6">
                     <a href="#" class="hover:scale-105">
                         <img src="../assets/icons/search.png" alt="search">
                     </a>
@@ -76,7 +76,7 @@
             <div class="absolute flex items-center justify-center h-full w-full opacity-20 -z-20">
                 <img class="group-hover:scale-105" src="../assets/images/nike.png" alt="nike">
             </div>
-            <div class="text-center font-bold md:text-7xl text-5xl">AIR Beyond Compare</div>
+            <div class="cqfdfewf">AIR Beyond Compare</div>
             <div class="relative flex flex-1 w-full">
                 <div class="absolute flex items-center justify-center h-full w-full -z-10 sm:-mt-20 sm:-ml-16 -mt-8 -ml-8">
                     <img src="../assets/images/bunner.png" alt="Banner">
@@ -98,9 +98,9 @@
     </div>
 
     <!-- Block Two -->
-    <div class="flex flex-col mx-auto h-screen">
+    <div class="site-block">
         <!-- Banner 2 -->
-        <div class="relative flex flex-col items-center justify-between h-full bg-primary">
+        <div class="relative flex flex-col items-center justify-between h-full bg-primary block_banner">
             <div class="absolute flex items-center justify-center h-full w-full opacity-40 z-10">
                 <img src="../assets/images/NIKE ZOOM.png" alt="nike">
             </div>
@@ -129,7 +129,7 @@
     </div>
 
     <!-- Block Three -->
-    <div class="flex flex-col mx-auto h-screen">
+    <div class="site-block">
 
         <!-- Slider -->
         <div class="flex flex-col items-center justify-center h-full w-full">
